syntax = "proto3";

package rpc;

import "rpc/base.proto";

option java_package = "com.github.paopaoyue.mesh.rpc.proto";
option java_outer_classname = "RpcTest";

message EchoRequest {
  string text = 1;
}

message EchoResponse {
  string text = 1;

  RespBase base = 255;
}


enum ServiceStatusCode {
  SERVICE_OK = 0;
}

service DictionaryService {
  rpc echo(EchoRequest) returns (EchoResponse);
}
